public/scss/layouts/_default.scss
html, body {
  height: 100% !important;
  overflow-x: hidden;
}

body {
  min-width: 1280px;
  // min-height: 768px;
  // background-color: $body-bg-color;
  $arguments: $body-bg-color-1, $body-bg-color-2;
  @include linear-gradient($arguments);
}

.public-container {
  height: 100%;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.system-message-container {
  $width: 70%;

  margin-left: - $width / 2;
  position: fixed;
  top: rem-calc(80);
  left: 50%;
  width: $width;
  height: auto;
  display: block;
  align-items: center;
  justify-content: center;
}

.loading-spinner-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;
}

.row {
  max-width: 100%;
}

.main {
  overflow: hidden;

  &__main-section {
    height: 100%;
    padding-left: 80px;
    box-sizing: border-box;

    &__main-view {
      height: 100%;
      overflow: hidden;

      &__header {

      }

      &__contents {
        height: 100%;
      }
    }
  }
}

